# tree-sitter-wikitext

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.md  Makefile  Package.swift  README.md  binding.gyp  biome.json  go.mod  grammar.js  justfile  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-wikitext.pc.in
bindings/c/tree_sitter/: tree-sitter-wikitext.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_wikitext/: __init__.py  binding.c
bindings/python/tree_sitter_wikitext.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bindings/rust/: lib.rs
bindings/swift/TreeSitterWIKITEXTTests/: TreeSitterWIKITEXTTests.swift
examples/: 2026_FIFA_World_Cup.wikitext  Cattle.wikitext  Jesus.wikitext  Kerala.hi.wikitext  Kerala.ml.wikitext  Magahi_language.wikitext  Pet_door.wikitext  belgium.wikitext  comment.wikitext  html.wikitext  images.wikitext  links.wikitext  lists.wikitext  media.wikitext  obama.wikitext  oxygen.wikitext  ref.wikitext  sample.wikitext  simple.wikitext  syntaxhighlight.wikitext  tables.wikitext  template_infobox_sodium.wikitext  templates.wikitext  text.wikitext
queries/: folds.scm  highlights.scm  injections.scm  links.scm  templates.scm
scripts/: gen-namespaces.py
src/: grammar.json  namespace_names.h  node-types.json  parser.c  scanner.c
test/: parse-wiki-dump.sh
test/corpus/: comments.txt  gallery.txt  headers.txt  html.txt  links.txt  lists.txt  media.txt  parser_functions.txt  redirects.txt  signatures.txt  syntaxhighlight.txt  tables.txt  templates.txt  text.txt  typography.txt
tests/corpus/: templates.txt
