[package]
name = "tree-sitter-wikitext"
description = "wikitext grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "wikitext"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/santhoshtr/tree-sitter-wikitext"
edition = "2024"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dev-dependencies]
tree-sitter = "0.25.8"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0"
