[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-wikitext"
description = "Wikitext grammar for tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "wikitext"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"
authors = [
  { name = "Santhosh Thottingal", email = "santhosh.thottingal@gmail.com" },
]
[project.urls]
Homepage = "https://github.com/santhoshtr/tree-sitter-wikitext"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
[tool.setuptools]
package-dir = {"" = "bindings/python"}

[tool.setuptools.packages.find]
where = ["bindings/python"]

[tool.setuptools.package-data]
tree_sitter_wikitext = ["*.pyi", "py.typed"]
"tree_sitter_wikitext.queries" = ["*.scm"]

